--- a/public/cuba/assets/css/color-2.css
+++ b/public/cuba/assets/css/color-2.css
@@ -12,8 +12,8 @@
 
  */
  :root {
-    --theme-deafult: #FFC107;
-    --theme-secondary: #FFC107; }
+    --theme-deafult: #7c5e38;
+    --theme-secondary: #7c5e38; }
 
 /**=====================
      Reset css start
