--- a/public/cuba/assets/css/color-3.css
+++ b/public/cuba/assets/css/color-3.css
@@ -12,7 +12,7 @@
 
  */
 :root {
-  --theme-deafult: #FFC107;
+  --theme-deafult: #7c5e38;
   --theme-secondary: #512900; }
 
 /**=====================
