--- a/public/cuba/assets/css/document.css
+++ b/public/cuba/assets/css/document.css
@@ -48,7 +48,7 @@
     padding: 0 0;
 }
 .document .page-wrapper .page-header .mobile-sidebar .media-body .switch a svg {
-    stroke: #212529;
+    stroke: #0f3029;
 }
 .document .page-wrapper .page-header .navbar-collapse .navbar-nav {
     display: -webkit-box;
