--- a/public/cuba/assets/scss/themes/_document.scss
+++ b/public/cuba/assets/scss/themes/_document.scss
@@ -44,7 +44,7 @@
           .switch{
             a{
               svg{
-                stroke: #212529;               
+                stroke: #0f3029;               
               }
             }
           }
