--- a/img/PHP_Kasir-Restoran-main/PHP_Kasir-Restoran-main/src/css/bootstrap-5.2.0/css/bootstrap-reboot.css
+++ b/img/PHP_Kasir-Restoran-main/PHP_Kasir-Restoran-main/src/css/bootstrap-5.2.0/css/bootstrap-reboot.css
@@ -13,7 +13,7 @@
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
   --bs-yellow: #7c5e38;
-  --bs-green: #198754;
+  --bs-green: #0f3029;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
   --bs-black: #000;
@@ -31,7 +31,7 @@
   --bs-gray-900: #0f3029;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #0f3029;
   --bs-info: #0dcaf0;
   --bs-warning: #7c5e38;
   --bs-danger: #dc3545;
