--- a/img/PHP_Kasir-Restoran-main/PHP_Kasir-Restoran-main/src/css/bootstrap-5.2.0/css/bootstrap-utilities.css
+++ b/img/PHP_Kasir-Restoran-main/PHP_Kasir-Restoran-main/src/css/bootstrap-5.2.0/css/bootstrap-utilities.css
@@ -65,7 +65,7 @@
 }
 
 .link-success {
-  color: #198754 !important;
+  color: #0f3029 !important;
 }
 .link-success:hover, .link-success:focus {
   color: #146c43 !important;
